welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: value - is not a member of scala.collection.immutable.Range.Inclusive
  for (m<-1 to getMondeLargeur()-){
                                ^